[project]
name = "auto_login_for_easinote"
version = "0.1.0"
description = "一个用于自动登录希沃白板的CLI工具"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mouseinfo==0.1.3",
    "numpy==2.2.3",
    "opencv-python==4.11.0.86",
    "pillow==11.1.0",
    "pyautogui==0.9.54",
    "pygetwindow==0.0.9",
    "pymsgbox==1.0.9",
    "pyperclip==1.9.0",
    "pyrect==0.2.0",
    "pyscreeze==1.0.1",
    "pytweening==1.2.0",
    "retry>=0.9.2",
    "win11toast==0.35",
    "winsdk==1.0.0b10",
]
